--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vanilla JS Template</title>
+  <title>Kyle's Vanilla JS Template</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="container">
   <div class="row">
-    <h1 class="col">Vanilla Template</h1>
+    <h1 class="col">Kyle's awesome Vanilla Template</h1>
   </div>
 </header>
   <main class="container">
     Main Content
+      <button>"Click Me"</button>
   </main>
   <script src="js/script.js" defer></script>
 </body>
